# nlp-drone-tracking

./: .env.example  .gitignore  README.md  frames_2026-04-12_15.05.31.gv
apps/isaac_app/standalone/: config_loader.py  main.py  sensors.py  spawn_drones.py  world_builder.py
apps/isaac_app/standalone/spawn/: __init__.py  drone_spawner.py  person_spawner.py
apps/pegasus_app/: mission.py
config/: sim.yaml
docs/: ros2_mavros_offboard.md  run_drone_person_tracking.md
models/: dummy_policy.ts.pt
ros2_ws/.../: pyvenv.cfg
ros2_ws/src/drone_arm/: package.xml  setup.cfg  setup.py
ros2_ws/src/drone_arm/drone_arm/: arm_drone_node.py
ros2_ws/src/drone_search_track/: package.xml  setup.cfg  setup.py
ros2_ws/src/drone_search_track/drone_search_track/: cfc_controller_node.py  search_and_track_node.py
ros2_ws/src/drone_search_track/tools/: export_dummy_policy_torchscript.py
ros2_ws/src/person_detector/: package.xml  setup.py
ros2_ws/src/person_detector/person_detector/: hog_person_detector_node.py
scripts/: arm_drone.sh  build_ros.sh  export_policy.py  land_drone.sh  offboard_takeoff.sh  policy.ts  run_isaac.sh  run_mavros_px4.sh  run_ros.sh  setup_env.sh
tests/: test_structure.py
